--- a/src/App.css
+++ b/src/App.css
@@ -63,7 +63,8 @@ html, body {
   display: flex;
   height: 84%;
   width: 97.2%;
-  margin-top: 40px;
+  margin-top: 22px;
+  margin-bottom: 20px;
   background-color: #f7e7ce;
   padding: 20px;
   border-radius: 10px;
@@ -93,6 +94,7 @@ html, body {
 
 .description {
   margin-bottom: 20px;
+  
 }
 
 .buttons .btn-vm {
@@ -129,5 +131,46 @@ h1 {
 }
 
 p {
+color: #4B3832;
+}
+
+.about-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 84%;
+  width: 97.2%;
+  margin-top: 22px;
+  margin-bottom: 20px;
+  background-color: #f7e7ce;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+  text-align: center;
+  font-family: Arial, sans-serif;
+  color: #4B3832;
+}
+
+.about-title {
+  font-size: 2rem;
+  color: #333;
+  margin-bottom: 10px;
+  text-align: center;
+}
+
+.about-text {
+  color: #555;
+  font-size: 1.2rem;
+  font-family: Arial, sans-serif;
+  line-height: 1.5;
+  text-align: center;
+  max-width: 600px;
+}
+
+
+.highlight {
+font-weight: bold;
+font-family: Arial, sans-serif;
 color: #4B3832;
 }
